--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,9 @@
-<mat-toolbar class="navbar" color="primary">
+<mat-toolbar *ngIf="!(isLoginRouteActivated() || isCadastroRouteActivated())" class="navbar" color="primary">
 
     <button @fadeState (click)="location.back()" *ngIf="!isHomeRouteActivated()" mat-icon-button matTooltip="Voltar">
         <mat-icon>arrow_back</mat-icon>
-      </button>
+    </button>
+    <button style="margin-left: auto;" @fadeState (click)="logoutUser()" mat-icon-button matTooltip="Sair">
+      <mat-icon>logout</mat-icon>
+  </button>
 </mat-toolbar>    
