--- a/src/app/menu-principal/jogo/jogo.component.scss
+++ b/src/app/menu-principal/jogo/jogo.component.scss
@@ -1,8 +1,18 @@
 :host {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #95B2F4;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #95B2F4;
+}
+
+.center-image {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  width: 42vw;
+  height: 42vw;
+  background-color: #6292FF;
+}
