--- a/src/app/menu-principal/loja/loja.component.html
+++ b/src/app/menu-principal/loja/loja.component.html
@@ -1,6 +1,6 @@
 <mat-card class="center-image">
     <div class="content">
-      <div class="title">TRILHA</div>
+      <div class="title">LOJA</div>
 
     </div>
   </mat-card>
