--- a/src/app/menu-principal/personalizar/personalizar.component.html
+++ b/src/app/menu-principal/personalizar/personalizar.component.html
@@ -1,6 +1,6 @@
 <mat-card class="center-image">
     <div class="content">
-      <div class="title">TRILHA</div>
+      <div class="title">PERSONALIZAR</div>
 
     </div>
   </mat-card>
