--- a/src/app/login-page/login-form/login-form.component.html
+++ b/src/app/login-page/login-form/login-form.component.html
@@ -12,13 +12,10 @@
       <div>Já possui conta?</div>
       <mat-form-field appearance="fill">
         <mat-label>Nome de usuário</mat-label>
-        <input [disabled]="loading" matInput placeholder="Digite seu usuário..." formControlName="user">
+        <input [disabled]="loading" matInput placeholder="Digite seu usuário..." formControlName="username">
         <mat-hint align="end">Campo obrigatório*</mat-hint>
-        <mat-error *ngIf="loginForm.controls['user'].hasError('required')">
-          Por favor, digite seu e-mail de usuário
-        </mat-error>
-        <mat-error *ngIf="loginForm.controls['user'].hasError('email')">
-          O usuário deve ser um e-mail válido
+        <mat-error *ngIf="loginForm.controls['username'].hasError('required')">
+          Por favor, digite seu ID de usuário
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="fill">
@@ -34,8 +31,7 @@
       </mat-error> -->
       </mat-form-field>
       <div class="bottom-form">
-        <button class="butao" [routerLink]="['/menu']" routerLinkActive="router-link-active"
-          mat-raised-button>Login</button>
+        <button class="butao" type="submit" mat-raised-button>Login</button>
         <button class="butao" mat-button>Esqueceu a senha?</button>
       </div>
 
