--- a/src/app/menu-principal/personalizar/personalizar.component.scss
+++ b/src/app/menu-principal/personalizar/personalizar.component.scss
@@ -1,59 +1,107 @@
 :host {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #95B2F4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #95b2f4;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 40px;
+  padding: 8px 0 0;
+  text-align: center;
+  color: white;
+}
+
+.center-image {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  width: 55%;
+  background-color: #6292ff;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.botao {
+  margin: 8px;
+  width: 140px;
+  background-color: #95b2f4
+}
+
+.menu {
+  display: flex;
+  margin: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.mat-button-wrapper {
+  position: relative;
+  top: -45px;
+}
+
+.mat-icon {
+  width: 10px;
+  height: 10px;
+  font-size: 20px;
+  vertical-align: text-top;
+}
+
+ul {
+  list-style: none;
+
+}
+ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+ul img {
+  height: 100px;
+  width: 100px;
+  margin: 12px 0;
+}
+
+.choose-menu {
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #fff;
+  border-radius: 12px;
+  margin: 20px 25px;
+  max-height: 360px;
+}
+.label {
+  font-weight: 500;
+  font-size: 20px;
+  padding: 8px 0 0;
+  text-align: center;
+  color: white;
+}
+
+.list-items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  overflow: auto;
+  max-width: 80%;
+  padding: 0;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+}
+  li span {
+    color: #fff;
   }
-  
-  .title {
-    font-weight: 700;
-    font-size: 40px;
-    padding: 8px 0 0;
-    text-align: center;
-    color: white;
-  }
-  
-  .center-image {
-    display: flex;
-    flex-direction: column;
-  
-    align-items: center;
-    width: 55%;
-    height: 50%;
-    background-color: #6292FF;
-  }
-  
-  .content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .botao {
-    margin: 12px 80px 40px;
-    width: 120px;
-    height: 120px;
-  }
-  
-  .menu {
-    display: flex;
-    margin: 24px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .mat-button-wrapper {
-    position: relative;
-    top: -45px;
-  }
-  
-  .mat-icon {
-    width: 60px;
-      height: 60px;
-      font-size: 60px;
-  }
-  
