paginas de estatistica e loja + funções

--- a/src/app/menu-principal/loja/loja.component.html
+++ b/src/app/menu-principal/loja/loja.component.html
@@ -1,7 +1,33 @@
 <mat-card class="center-image">
-    <div class="content">
-      <div class="title">LOJA</div>
+  <div class="content">
+    <div class="title">Loja</div>
+    <div class="choose-menu">
+      <span class="label">Peça</span>
+      <ul class="list-items">
+        <!-- <li *ngFor='let piece of pieces; let i'>
+          <img src="{{piece.urlImg}}" alt="">
+          <button *ngIf="piece.equipped" mat-flat-button class="botao">
+            <span>Equipado
+              <mat-icon>check</mat-icon>
+            </span>
+            <span *ngIf="!piece.userOwns" [routerLink]="['/loja']" routerLinkActive="router-link-active">Ir à Loja
+              <mat-icon>shopping_cart</mat-icon>
+            </span>
+          </button>
+          <button *ngIf="!piece.equipped && piece.userOwns" (click)="equipPiece(i)" mat-flat-button class="botao">
+            <span>
+              Usar
+            </span>
+          </button> 
+          <button *ngIf="!piece.userOwns" (click)="equipPiece(i)"
+          mat-flat-button class="botao">
+            <span >Ir à Loja
+              <mat-icon>shopping_cart</mat-icon>
+            </span>
+          </button> 
 
+        </li> -->
+      </ul>
     </div>
-  </mat-card>
-  
+  </div>
+</mat-card>
