--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,10 @@
     <button @fadeState (click)="location.back()" *ngIf="!isHomeRouteActivated()" mat-icon-button matTooltip="Voltar">
         <mat-icon>arrow_back</mat-icon>
     </button>
-    <button style="margin-left: auto;" @fadeState (click)="logoutUser()" mat-icon-button matTooltip="Sair">
-      <mat-icon>logout</mat-icon>
-  </button>
+    <div style="margin-left: auto;">
+      <span>Olá, {{user.username}}!   </span>
+      <button  @fadeState (click)="logoutUser()" mat-icon-button matTooltip="Sair">
+        <mat-icon>logout</mat-icon>
+    </button>
+    </div>
 </mat-toolbar>    
