--- a/src/app/menu-principal/estatistica/estatistica.component.html
+++ b/src/app/menu-principal/estatistica/estatistica.component.html
@@ -1,7 +1,39 @@
 <mat-card class="center-image">
     <div class="content">
       <div class="title">ESTATÍSTICAS</div>
-
+      <div class="content-menu">
+        <div class="estatistica-menu">
+          <div class="subtitle">Estatísticas de usuário</div>
+          <div class="stats">
+            <div class="stats-wrap">
+              <div class="stats-number">10</div>
+              <div class="stats-name">Proporção de vitórias</div>
+            </div>
+            <div class="stats-wrap">
+              <div class="stats-number">10</div>
+              <div class="stats-name">Partidas jogadas</div>
+            </div>
+            <div class="stats-wrap">
+              <div class="stats-number">10</div>
+              <div class="stats-name">Partidas ganhas</div>
+            </div>
+            <div class="stats-wrap">
+              <div class="stats-number">10</div>
+              <div class="stats-name">Tempo de jogo</div>
+            </div>
+          </div>
+        </div>
+        <div class="estatistica-menu">
+          <div class="subtitle">Top 100 global</div>
+          <div class="ranking-wrap">
+            <div class="ranking" *ngFor="let ranking of rankings">
+              <span>{{ranking.position}}</span>
+              <span>{{ranking.username}}</span>
+              <hr class="divider">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </mat-card>
   
