--- a/src/app/menu-principal/estatistica/estatistica.component.scss
+++ b/src/app/menu-principal/estatistica/estatistica.component.scss
@@ -1,59 +1,127 @@
 :host {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #95B2F4;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 40px;
+  padding: 8px 0 0;
+  text-align: center;
+  color: white;
+}
+
+.subtitle {
+  font-weight: 700;
+  font-size: 24px;
+  padding: 8px 0 0;
+  text-align: center;
+  color: #95B2F4;
+}
+
+.center-image {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  width: 55%;
+  height: 50%;
+  background-color: #6292FF;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  &-menu{
     width: 100%;
     height: 100%;
-    background-color: #95B2F4;
+    display: flex;
+    flex-direction: row;
   }
-  
-  .title {
-    font-weight: 700;
-    font-size: 40px;
-    padding: 8px 0 0;
+}
+
+.botao {
+  margin: 12px 80px 40px;
+  width: 120px;
+  height: 120px;
+}
+
+.menu {
+  display: flex;
+  margin: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.mat-button-wrapper {
+  position: relative;
+  top: -45px;
+}
+
+.mat-icon {
+  width: 60px;
+  height: 60px;
+  font-size: 60px;
+}
+
+.estatistica-menu {
+  width: 43%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #fff;
+  border-radius: 12px;
+  margin: 20px 25px;
+  max-height: 300px;
+}
+
+.stats {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  &-wrap {
     text-align: center;
-    color: white;
+    width: 45%;
   }
-  
-  .center-image {
+  &-number {
+    font-size: 38px;
+    font-weight: 400;
+    color: #95B2F4;
+  }
+  &-name {
+    font-size: 14px;
+    font-weight: 700;
+    color: #6292FF;
+  }
+}
+
+.ranking {
+  font-size: 14px;
+  font-weight: 700;
+  color: #6292FF;
+  width: 90%;
+  &-wrap {
+    overflow: scroll;
     display: flex;
     flex-direction: column;
-  
-    align-items: center;
-    width: 55%;
-    height: 50%;
-    background-color: #6292FF;
-  }
-  
-  .content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     width: 100%;
-    height: 100%;
-  }
-  
-  .botao {
-    margin: 12px 80px 40px;
-    width: 120px;
-    height: 120px;
-  }
-  
-  .menu {
-    display: flex;
-    margin: 24px;
-    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
   }
-  
-  .mat-button-wrapper {
-    position: relative;
-    top: -45px;
-  }
-  
-  .mat-icon {
-    width: 60px;
-      height: 60px;
-      font-size: 60px;
-  }
-  
+}
+
+.divider {
+  border-top: 0.5px solid #95B2F4;
+  border-radius: 1px;
+}
